# data-agent

./: .gitignore  README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate__sql.py
app/api/: dependencies.py  frontend.py  main.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py  tei_embedding_client.py
app/conf/: app_config.py
app/entities/: value_info.py
app/models/: column_info.py  column_metric.py  table_info.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: table_info_mapper.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
app/static/: index.html
conf/: app_config.example.yaml  meta_config.yaml
docker/: docker-compose.yaml
docs/: architecture.md  query_examples.md
